8074831: Resolve disabled warnings for libjsound

Reviewed-by: amenkov, azvegint